--- a/vm/devices/tdisp/Cargo.toml
+++ b/vm/devices/tdisp/Cargo.toml
@@ -2,15 +2,16 @@
 # Licensed under the MIT License.
 
 [package]
-name = "hvdef"
+name = "tdisp"
 edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-open_enum.workspace = true
-bitfield-struct.workspace = true
-static_assertions.workspace = true
+inspect.workspace = true
+tracing.workspace = true
+anyhow.workspace = true
 zerocopy.workspace = true
+hvdef.workspace = true
 
 [lints]
 workspace = true
