--- a/vm/devices/pci/pci_core/Cargo.toml
+++ b/vm/devices/pci/pci_core/Cargo.toml
@@ -20,5 +20,8 @@ thiserror.workspace = true
 tracelimit.workspace = true
 tracing.workspace = true
 zerocopy.workspace = true
+
+# TDISP TODO: workaround
+anyhow.workspace = true
 [lints]
 workspace = true
