--- a/vm/devices/storage/disk_nvme/nvme_driver/Cargo.toml
+++ b/vm/devices/storage/disk_nvme/nvme_driver/Cargo.toml
@@ -27,6 +27,7 @@ thiserror.workspace = true
 tracing.workspace = true
 zerocopy.workspace = true
 safe_intrinsics.workspace = true
+tdisp.workspace = true
 
 [dev-dependencies]
 chipset_device.workspace = true
