--- a/vm/devices/storage/disk_nvme/nvme_driver/fuzz/Cargo.toml
+++ b/vm/devices/storage/disk_nvme/nvme_driver/fuzz/Cargo.toml
@@ -27,6 +27,7 @@ user_driver.workspace = true
 vmcore.workspace = true
 xtask_fuzz.workspace = true
 user_driver_emulated_mock.workspace = true
+tdisp.workspace = true
 
 [target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
 libfuzzer-sys.workspace = true
