--- a/openhcl/virt_mshv_vtl/Cargo.toml
+++ b/openhcl/virt_mshv_vtl/Cargo.toml
@@ -54,6 +54,7 @@ thiserror.workspace = true
 tracing.workspace = true
 zerocopy.workspace = true
 safe_intrinsics.workspace = true
+tdisp.workspace = true
 
 [build-dependencies]
 build_rs_guest_arch.workspace = true
