--- a/vmm_core/virt_whp/Cargo.toml
+++ b/vmm_core/virt_whp/Cargo.toml
@@ -45,6 +45,8 @@ thiserror.workspace = true
 tracing.workspace = true
 winapi.workspace = true
 zerocopy.workspace = true
+tdisp.workspace = true
+
 [build-dependencies]
 build_rs_guest_arch.workspace = true
 
