--- a/vm/devices/pci/pci_resources/Cargo.toml
+++ b/vm/devices/pci/pci_resources/Cargo.toml
@@ -11,6 +11,7 @@ chipset_device.workspace = true
 chipset_device_resources.workspace = true
 pci_core.workspace = true
 guestmem.workspace = true
+tdisp.workspace = true
 vmcore.workspace = true
 vm_resource.workspace = true
 
