--- a/vmm_core/Cargo.toml
+++ b/vmm_core/Cargo.toml
@@ -31,6 +31,7 @@ input_core.workspace = true
 pci_core.workspace = true
 pci_resources.workspace = true
 power_resources.workspace = true
+tdisp.workspace = true
 vmbus_channel.workspace = true
 vmbus_server.workspace = true
 vm_resource.workspace = true
