--- a/vmm_core/vmotherboard/Cargo.toml
+++ b/vmm_core/vmotherboard/Cargo.toml
@@ -36,6 +36,7 @@ floppy = { optional = true, workspace = true }
 floppy_pcat_stub = { optional = true, workspace = true }
 generation_id.workspace = true
 guest_watchdog.workspace = true
+tdisp.workspace = true
 ide.workspace = true
 missing_dev.workspace = true
 pci_bus.workspace = true
@@ -62,6 +63,9 @@ parking_lot.workspace = true
 paste.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+
+# TDISP TODO: is this a workaround?
+pci_core.workspace = true
 
 [lints]
 workspace = true
