--- a/vm/devices/tdisp/Cargo.toml
+++ b/vm/devices/tdisp/Cargo.toml
@@ -11,6 +11,7 @@ inspect.workspace = true
 anyhow.workspace = true
 hvdef.workspace = true
 tracing.workspace = true
+thiserror.workspace = true
 
 [lints]
 workspace = true
