--- a/vm/devices/tdisp/Cargo.toml
+++ b/vm/devices/tdisp/Cargo.toml
@@ -12,6 +12,8 @@ anyhow.workspace = true
 hvdef.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
+open_enum.workspace = true
+zerocopy.workspace = true
 
 [lints]
 workspace = true
