--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,6 +167,7 @@ minimal_rt = { path = "openhcl/minimal_rt" }
 minimal_rt_build = { path = "openhcl/minimal_rt_build" }
 openhcl_dma_manager = { path = "openhcl/openhcl_dma_manager" }
 openhcl_tdisp = { path = "openhcl/openhcl_tdisp" }
+openhcl_tdisp_resources = { path = "openhcl/openhcl_tdisp_resources" }
 sidecar_client = { path = "openhcl/sidecar_client" }
 sidecar_defs = { path = "openhcl/sidecar_defs" }
 underhill_attestation = { path = "openhcl/underhill_attestation" }
@@ -226,6 +227,7 @@ hyperv_ic_resources = { path = "vm/devices/hyperv_ic_resources" }
 hyperv_ic_guest = { path = "vm/devices/hyperv_ic_guest" }
 input_core = { path = "vm/devices/input_core" }
 underhill_config = { path = "vm/devices/get/underhill_config" }
+memoryblock = { path = "vm/devices/memoryblock" }
 missing_dev = { path = "vm/devices/missing_dev" }
 missing_dev_resources = { path = "vm/devices/missing_dev_resources" }
 gdma = { path = "vm/devices/net/gdma" }
