--- a/vm/devices/storage/disk_nvme/nvme_driver/Cargo.toml
+++ b/vm/devices/storage/disk_nvme/nvme_driver/Cargo.toml
@@ -28,6 +28,7 @@ tracing.workspace = true
 zerocopy.workspace = true
 safe_intrinsics.workspace = true
 tdisp.workspace = true
+openhcl_tdisp_resources.workspace = true
 
 [dev-dependencies]
 chipset_device.workspace = true
