--- a/vm/devices/user_driver_emulated_mock/Cargo.toml
+++ b/vm/devices/user_driver_emulated_mock/Cargo.toml
@@ -18,6 +18,7 @@ pci_core.workspace = true
 tracing.workspace = true
 user_driver.workspace = true
 tdisp.workspace = true
+openhcl_tdisp_resources.workspace = true
 
 [lints]
 workspace = true
