Basic bind flow

--- a/vm/devices/tdisp/Cargo.toml
+++ b/vm/devices/tdisp/Cargo.toml
@@ -13,6 +13,7 @@ hvdef.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
 zerocopy.workspace = true
+parking_lot.workspace = true
 
 [lints]
 workspace = true
