--- a/vm/devices/user_driver/Cargo.toml
+++ b/vm/devices/user_driver/Cargo.toml
@@ -28,6 +28,9 @@ parking_lot.workspace = true
 tracing.workspace = true
 vfio-bindings.workspace = true
 zerocopy.workspace = true
+
+openhcl_tdisp.workspace = true
+openhcl_tdisp_resources.workspace = true
 [target.'cfg(target_os = "linux")'.dependencies]
 fs-err.workspace = true
 futures.workspace = true
