working packet transfer and serialization/deserialization over vpci

--- a/vm/devices/pci/vpci_client/Cargo.toml
+++ b/vm/devices/pci/vpci_client/Cargo.toml
@@ -22,7 +22,9 @@ anyhow.workspace = true
 futures.workspace = true
 futures-concurrency.workspace = true
 parking_lot.workspace = true
+openhcl_tdisp_resources.workspace = true
 slab.workspace = true
+tdisp.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 zerocopy.workspace = true
