--- a/openhcl/underhill_core/Cargo.toml
+++ b/openhcl/underhill_core/Cargo.toml
@@ -92,6 +92,8 @@ underhill_config.workspace = true
 underhill_mem.workspace = true
 underhill_threadpool.workspace = true
 openhcl_attestation_protocol.workspace = true
+openhcl_tdisp_resources.workspace = true
+tdisp.workspace = true
 bootloader_fdt_parser.workspace = true
 vga_proxy.workspace = true
 video_core.workspace = true
