Working in a CVM!

--- a/openhcl/lower_vtl_permissions_guard/Cargo.toml
+++ b/openhcl/lower_vtl_permissions_guard/Cargo.toml
@@ -11,6 +11,8 @@ hvdef.workspace = true
 inspect.workspace = true
 user_driver.workspace = true
 virt.workspace = true
+underhill_mem.workspace = true
+memory_range.workspace = true
 
 anyhow.workspace = true
 
