--- a/support/sev_guest_device/Cargo.toml
+++ b/support/sev_guest_device/Cargo.toml
@@ -13,6 +13,7 @@ zerocopy.workspace = true
 [target.'cfg(target_os = "linux")'.dependencies]
 nix = { workspace = true, features = ["ioctl"] }
 thiserror.workspace = true
+tracing.workspace = true
 
 [lints]
 workspace = true
