--- a/vm/devices/tdisp/Cargo.toml
+++ b/vm/devices/tdisp/Cargo.toml
@@ -13,6 +13,8 @@ tracing.workspace = true
 thiserror.workspace = true
 zerocopy.workspace = true
 parking_lot.workspace = true
+bitfield-struct.workspace = true
+static_assertions.workspace = true
 
 [lints]
 workspace = true
